
set(OPENSSL_DOCS_LIST)
set(OPENSSL_DOCS_FULLLIST)
set(OPENSSL_VERSION_NUMBER_PAGENAMELIST)
function(perldoc_add_document_man PODFILE DEFAULTPAGENUMBER)
    get_filename_component(_PODFILE_ABSOLUTE ${PODFILE} ABSOLUTE)
    get_filename_component(_MAINPAGENAME ${PODFILE} NAME_WLE)
    execute_process(COMMAND ${PERL_EXECUTABLE} "${CMAKE_SOURCE_DIR}/openssl/util/extract-section.pl" ${DEFAULTPAGENUMBER}
        INPUT_FILE ${_PODFILE_ABSOLUTE}
        OUTPUT_VARIABLE _PAGENUMBER_OUTPUT
        COMMAND_ERROR_IS_FATAL ANY
    )
    string(STRIP ${_PAGENUMBER_OUTPUT} _PAGENUMBER)

    set(_PAGENAMELIST)
    if (_MAINPAGENAME STREQUAL "SSLeay_version")
        set(_PAGENAMELIST ${OPENSSL_VERSION_NUMBER_PAGENAMELIST})
    else()
        execute_process(COMMAND ${PERL_EXECUTABLE} ${CMAKE_SOURCE_DIR}/openssl/util/extract-names.pl
            INPUT_FILE ${_PODFILE_ABSOLUTE}
            OUTPUT_VARIABLE _PAGENAME_OUTPUT
            COMMAND_ERROR_IS_FATAL ANY
        )
        string(STRIP ${_PAGENAME_OUTPUT} _PAGENAMES)
        string(REGEX REPLACE "[ \t\r\n]+" ";" _PAGENAMELIST ${_PAGENAMES})
        if (_MAINPAGENAME STREQUAL "OPENSSL_VERSION_NUMBER")
            set(OPENSSL_VERSION_NUMBER_PAGENAMELIST "${_PAGENAMELIST}" PARENT_SCOPE)
            return()
        endif()
    endif()
    # kill duplicates which leads to wrong result
    if (_MAINPAGENAME STREQUAL "EVP_PKEY_CTX_ctrl")
        list(REMOVE_ITEM _PAGENAMELIST "EVP_PKEY_get_default_digest_nid")
    endif()
    set(_PAGEOUTPUTLIST)
    foreach (_PAGENAME IN LISTS _PAGENAMELIST)
        if ( NOT "${_PAGENAME}" STREQUAL "${_MAINPAGENAME}" )
            list(FIND OPENSSL_DOCS_FULLLIST "man/man${_PAGENUMBER}/${_PAGENAME}.${_PAGENUMBER}" _FULLLISTINDEX)
            if (NOT _FULLLISTINDEX EQUAL -1)
                set(_PAGEOUTPUTLIST ${_PAGEOUTPUTLIST} "man/man${_PAGENUMBER}/${_PAGENAME}.${_PAGENUMBER}")
            endif()
            unset(_FULLLISTINDEX)
        endif()
    endforeach()
    add_custom_command(OUTPUT "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}"
                       BYPRODUCTS ${_PAGEOUTPUTLIST}
                       COMMAND ${CMAKE_COMMAND}
                               "-DSECTION=${_PAGENUMBER}"
                               "-DPODFILEPATH=${_PODFILE_ABSOLUTE}"
                               "-DLINKS=\"${_PAGEOUTPUTLIST}\""
                               "-DOUTPUTFILEPATH=man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}"
                               "-P" generateDoc.cmake
                       MAIN_DEPENDENCY ${PODFILE}
    )
    set(OPENSSL_DOCS_LIST ${OPENSSL_DOCS_LIST} "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}" PARENT_SCOPE)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man${_PAGENUMBER}
    )
    foreach (MANFILE IN LISTS _PAGENAMELIST)
        install(FILES ${CMAKE_CURRENT_BINARY_DIR}/man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}
            DESTINATION ${CMAKE_INSTALL_MANDIR}/man${_PAGENUMBER}
            RENAME ${MANFILE}.${_PAGENUMBER}
        )
    endforeach()
    set(OPENSSL_DOCS_FULLLIST ${OPENSSL_DOCS_FULLLIST} ${_PAGEOUTPUTLIST} "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}" PARENT_SCOPE)
endfunction()

configure_file(generateDoc.cmake.in generateDoc.cmake @ONLY)

foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/CA.pl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/asn1parse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/c_rehash.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ca.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ciphers.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/cms.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/config.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/crl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/crl2pkcs7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/dgst.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/dhparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/dsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/dsaparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ec.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ecparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/enc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/errstr.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/gendsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/genpkey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/genrsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/nseq.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ocsp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/openssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/passwd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkcs12.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkcs7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkcs8.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkeyparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/pkeyutl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/rand.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/req.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/rsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/rsautl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/s_client.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/s_server.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/s_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/sess_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/smime.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/speed.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/spkac.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/ts.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/tsget.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/x509.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/apps/x509v3_config.pod"
)
    perldoc_add_document_man(${PODFILE} 1)
endforeach()
foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_OBJECT_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_STRING_length.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_STRING_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_STRING_print_ex.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_TIME_set.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ASN1_generate_nconf.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_base64.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_buffer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_cipher.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_md.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_null.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_f_ssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_find_type.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_new_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_push.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_read.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_accept.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_connect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_mem.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_null.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_s_socket.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_set_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BIO_should_retry.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_BLINDING_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_CTX_start.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_add_word.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_bn2bin.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_cmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_copy.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_generate_prime.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_mod_inverse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_mod_mul_montgomery.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_mod_mul_reciprocal.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_num_bytes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_rand.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_set_bit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_swap.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/BN_zero.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_add0_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_add1_recipient_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_add1_signer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_compress.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_final.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_get0_RecipientInfos.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_get0_SignerInfos.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_get0_type.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_get1_ReceiptRequest.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_sign_receipt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_uncompress.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CMS_verify_receipt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CONF_modules_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CONF_modules_load_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/CRYPTO_set_ex_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_generate_parameters.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DH_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_SIG_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_do_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_dup_DH.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_generate_parameters.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/DSA_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_GFp_simple_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_GROUP_copy.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_GROUP_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_KEY_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_POINT_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EC_POINT_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_GET_LIB.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_clear_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_error_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_load_crypto_strings.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_load_strings.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_print_errors.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_put_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_remove_state.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ERR_set_mark.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_BytesToKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_DigestInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_DigestSignInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_DigestVerifyInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_EncodeInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_EncryptInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_OpenInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_CTX_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_cmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_derive.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_get_default_digest.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_keygen.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_print_private.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_set1_RSA.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_PKEY_verify_recover.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_SealInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_SignInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/EVP_VerifyInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OBJ_nid2obj.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_Applink.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_VERSION_NUMBER.pod" # need to come before "SSLeay_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_config.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_ia32cap.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_instrument_bus.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OPENSSL_load_builtin_modules.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/OpenSSL_add_all_algorithms.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PEM_write_bio_CMS_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PEM_write_bio_PKCS7_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS12_create.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS12_parse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS7_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS7_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS7_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS7_sign_add_signer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/PKCS7_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_bytes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_cleanup.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_egd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_load_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RAND_set_rand_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_blinding_on.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_check_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_padding_add_PKCS1_type_1.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_print.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_private_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_public_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_sign_ASN1_OCTET_STRING.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/RSA_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/SMIME_read_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/SMIME_read_PKCS7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/SMIME_write_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/SMIME_write_PKCS7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/SSLeay_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_NAME_ENTRY_get_object.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_NAME_add_entry_by_txt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_NAME_get_index_by_NID.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_NAME_print_ex.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_STORE_CTX_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_STORE_CTX_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_STORE_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_STORE_CTX_set_verify_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_STORE_set_verify_cb_func.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_VERIFY_PARAM_set_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_check_host.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_check_private_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_cmp_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/X509_verify_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/blowfish.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/bn.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/bn_internal.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/buffer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/crypto.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_ASN1_OBJECT.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_CMS_ContentInfo.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_DHparams.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_DSAPublicKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_ECPKParameters.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_ECPrivateKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_PKCS8PrivateKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_PrivateKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_RSAPublicKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509_ALGOR.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509_CRL.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509_NAME.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509_REQ.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/d2i_X509_SIG.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/des.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/des_modes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/dh.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/dsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ec.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ecdsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/engine.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/err.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/evp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/hmac.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/i2d_CMS_bio_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/i2d_PKCS7_bio_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/lh_stats.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/lhash.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/md5.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/mdc2.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/pem.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/rand.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/rc4.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ripemd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/rsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/sha.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/threads.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ui.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/ui_compat.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/crypto/x509.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CIPHER_get_name.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_COMP_add_compression_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_CTX_set1_prefix.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_CTX_set_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_CTX_set_ssl_ctx.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_cmd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CONF_cmd_argv.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_add1_chain_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_add_extra_chain_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_add_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_flush_sessions.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_get0_param.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_get_verify_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_load_verify_locations.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_sess_number.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_sess_set_cache_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_sess_set_get_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_sessions.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set1_curves.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set1_verify_cert_store.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_alpn_select_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_cert_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_cert_store.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_cert_verify_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_cipher_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_client_CA_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_client_cert_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_custom_cli_ext.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_default_passwd_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_generate_session_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_info_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_max_cert_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_msg_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_options.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_psk_client_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_quiet_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_read_ahead.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_session_cache_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_session_id_context.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_ssl_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_timeout.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_tlsext_servername_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_tlsext_status_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_tlsext_ticket_key_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_tmp_dh_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_tmp_rsa_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_set_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_use_certificate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_use_psk_identity_hint.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_CTX_use_serverinfo.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_SESSION_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_SESSION_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_SESSION_get_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_accept.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_alert_type_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_check_chain.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_clear.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_connect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_do_handshake.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_export_keying_material.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_SSL_CTX.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_ciphers.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_client_CA_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_current_cipher.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_default_timeout.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_ex_data_X509_STORE_CTX_idx.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_peer_cert_chain.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_peer_certificate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_psk_identity.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_rbio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_verify_result.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_get_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_library_init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_load_client_CA_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_pending.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_read.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_rstate_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_session_reused.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_connect_state.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_set_verify_result.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_state_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_want.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/SSL_write.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/d2i_SSL_SESSION.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/ssl/ssl.pod"
)
    perldoc_add_document_man(${PODFILE} 3)
endforeach()
add_custom_target(doc ALL DEPENDS ${OPENSSL_DOCS_LIST})
unset(OPENSSL_DOCS_FULLLIST)
unset(OPENSSL_DOCS_LIST)
